@@ -3,29 +3,127 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>ml.dmlc</groupId>
-        <artifactId>xgboost-jvm_2.12</artifactId>
-        <version>2.1.4</version>
-    </parent>
+
     <name>xgboost4j-spark</name>
-    <artifactId>xgboost4j-spark_2.12</artifactId>
+    <artifactId>xgboost4j-spark_${scala.binary.version}</artifactId>
+    <groupId>ml.dmlc</groupId>
+    <version>2.1.4-db1</version>
+
     <build>
+      <resources>
+        <resource>
+          <directory>src/main/resources</directory>
+          <filtering>true</filtering>
+        </resource>
+      </resources>
+
+      <pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <skipAssembly>false</skipAssembly>
-                </configuration>
-            </plugin>
+          <plugin>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <version>1.0</version>
+            <executions>
+              <execution>
+                <id>test</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
+      </pluginManagement>
+
+      <plugins>
+        <plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>3.2.2</version>
+          <executions>
+            <execution>
+              <id>compile</id>
+              <goals>
+                <goal>compile</goal>
+              </goals>
+              <phase>compile</phase>
+            </execution>
+            <execution>
+              <id>test-compile</id>
+              <goals>
+                <goal>testCompile</goal>
+              </goals>
+              <phase>test-compile</phase>
+            </execution>
+            <execution>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>compile</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>scala-compile-first</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>compile</goal>
+                <goal>add-source</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+          <configuration>
+            <skipTests>false</skipTests>
+            <useSystemClassLoader>false</useSystemClassLoader>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.scalatest</groupId>
+          <artifactId>scalatest-maven-plugin</artifactId>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <skipAssembly>false</skipAssembly>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.5.0</version>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>shade</goal>
+              </goals>
+              <configuration>
+                <!-- Relocate shaded packages -->
+                <relocations>
+                </relocations>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+
+      <extensions>
+        <extension>
+          <groupId>org.kuali.maven.wagons</groupId>
+          <artifactId>maven-s3-wagon</artifactId>
+          <version>1.2.1</version>
+        </extension>
+      </extensions>
     </build>
     <dependencies>
         <dependency>
             <groupId>ml.dmlc</groupId>
-            <artifactId>xgboost4j_2.12</artifactId>
-            <version>${project.version}</version>
+            <artifactId>xgboost4j_${scala.binary.version}</artifactId>
+            <version>2.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -45,5 +143,82 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+          <groupId>com.esotericsoftware</groupId>
+          <artifactId>kryo</artifactId>
+          <version>5.6.0</version>
+        </dependency>
+        <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <version>1.3.2</version>
+        </dependency>
+        <dependency>
+          <groupId>org.scalatest</groupId>
+          <artifactId>scalatest_${scala.binary.version}</artifactId>
+          <version>${scalatest.version}</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.scalactic</groupId>
+          <artifactId>scalactic_${scala.binary.version}</artifactId>
+          <version>${scalatest.version}</version>
+          <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+    <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
+      <flink.version>1.19.0</flink.version>
+      <junit.version>4.13.2</junit.version>
+      <spark.version>4.0.0</spark.version>
+      <spark.version.gpu>4.0.0</spark.version.gpu>
+      <fasterxml.jackson.version>2.15.2</fasterxml.jackson.version>
+      <scala.version>2.13.14</scala.version>
+      <scala.binary.version>2.13</scala.binary.version>
+      <hadoop.version>3.4.0</hadoop.version>
+      <maven.wagon.http.retryHandler.count>5</maven.wagon.http.retryHandler.count>
+      <log.capi.invocation>OFF</log.capi.invocation>
+      <use.cuda>OFF</use.cuda>
+      <cudf.version>24.04.0</cudf.version>
+      <spark.rapids.version>24.04.0</spark.rapids.version>
+      <cudf.classifier>cuda12</cudf.classifier>
+      <scalatest.version>3.2.18</scalatest.version>
+      <scala-collection-compat.version>2.12.0</scala-collection-compat.version>
+      <skip.native.build>false</skip.native.build>
+
+      <!-- SPARK-36796 for JDK-17 test-->
+      <extraJavaTestArgs>
+        -XX:+IgnoreUnrecognizedVMOptions
+        --add-opens=java.base/java.lang=ALL-UNNAMED
+        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+        --add-opens=java.base/java.io=ALL-UNNAMED
+        --add-opens=java.base/java.net=ALL-UNNAMED
+        --add-opens=java.base/java.nio=ALL-UNNAMED
+        --add-opens=java.base/java.util=ALL-UNNAMED
+        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+        --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+        --add-opens=java.base/sun.security.action=ALL-UNNAMED
+        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+      </extraJavaTestArgs>
+    </properties>
+
+    <repositories>
+      <repository>
+        <id>central_maven</id>
+        <name>central maven</name>
+        <url>https://repo1.maven.org/maven2</url>
+      </repository>
+      <repository>
+        <id>apache_maven</id>
+        <name>apache maven</name>
+        <url>https://repository.apache.org/content/repositories/orgapachespark-1435</url>
+      </repository>
+    </repositories>
 </project>
